# crossSolver

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  makefile
.github/workflows/: build-and-test.yaml
Puzzles/: puzzle1.txt  puzzle2.txt  puzzle3-203.txt  puzzle3-9.txt  puzzle4-43.txt  puzzle4-78.txt  puzzle8-190.txt
notes/: notes.txt
puzzles/: puzzle0.txt  puzzle1.txt  puzzle3-202.txt  puzzle3.txt  puzzle8-1.txt  puzzle8-2.txt  puzzle8-24.txt  puzzle8-337.txt
slitherlink/: CMakeLists.txt  README.md
slitherlink/src/: slitherlink.hpp
slitherlink/test/input/: puzzle1.txt
src/: batch_solver.cpp  bmp.cpp  bmp.hpp  bmpMaker.cpp  bmpMaker.h  cpuzzle.cpp  cpuzzle.h  crossSolver.cpp  index_generator.hpp  nonagram.cpp  nonagram.hpp  solver.cpp
